[package]
name = "horizon_sockets"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
bytemuck = { version = "1", features = ["derive"] }
log = { version = "0.4", optional = true }
slab = { version = "0.4", optional = true }

# Runtime back-ends
mio = { version = "1", features = ["net", "os-ext"], optional = true }

# Platform bindings
libc = { version = "0.2", features = ["extra_traits"] }

# monoio on supported platforms (Linux, Windows, and BSD for testing)
[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "freebsd"))'.dependencies]
monoio = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
"Win32_Foundation",
"Win32_System_Threading",
"Win32_Networking_WinSock",
"Win32_System_SystemInformation"
] }


[dev-dependencies]
anyhow = "1"

[features]
# Default features: mio everywhere, monoio on supported platforms
default = ["mio-runtime", "monoio-runtime"]
full = ["mio-runtime", "monoio-runtime"]
# Explicitly enable monoio where it works
linux-full = ["mio-runtime", "monoio-runtime"]
windows-full = ["mio-runtime", "monoio-runtime"]

mio-runtime = ["dep:mio", "dep:slab", "dep:log"]
monoio-runtime = ["dep:monoio"]
